Wed Sep 24 10:37:10 BST 2003 (njh)
----------------------------------

  * libclamav: fixed core dump when the plain text file contained just
  		the text "begin <number>"

Wed Sep 24 06:54:56 BST 2003 (njh)
---------------------------------
  * clamav-milter: redirect stdin/stdout/stderr

Sun Sep 21 22:03:13 CEST 2003 (tk)
----------------------------------
  * libclamav: enabled support for News messaged (thanks to
               Lars Magne Ingebrigtsen)

Sun Sep 21 22:00:34 CEST 2003 (tk)
----------------------------------
  * libclamav: unrar: fixed potential infinite loop (thanks to
	       Lars Magne Ingebrigtsen)

Sun Sep 21 21:19:36 CEST 2003 (tk)
----------------------------------
  * libclamav: increased MAGIC_BUFFER_SIZE to 14 bytes

Tue Sep 16 19:34:56 CEST 2003 (tk)
----------------------------------
  * libclamav: scan messages that start with "Delivered-To"

Tue Sep 16 18:47:39 CEST 2003 (tk)
----------------------------------
  * clamd: fixed compilation error (missing sighup variable)

Tue Sep 16 18:06:47 CEST 2003 (tk)
----------------------------------
  * libclamav: included patch from Thomas Lamy:
       > - a fix to my own fix (*ret was declared const -> gcc warning)
       > - antoher fix to my own code (double fclose() on malformed zip archive)
       > - global to local fix for unrarlib.c (BOOL FileFound).

Mon Sep 15 14:09:50 BST 2003
----------------------------
  * libclamav/mbox.c: Fixed potential buffer overrun files with long names
  			DOS style filename suffixes

Mon Sep 15 13:23:27 BST 2003
---------------------------
  * clamav-milter: Added defaults about 0.60e to INSTALL file

Sun Sep 14 21:11:00 CEST 2003
-----------------------------
  * clamd: a fatal race condition fixed (only cvs versions were vulnerable)

Fri Sep 12 06:39:30 CEST 2003
-----------------------------
  * clamd: re-open log file on SIGHUP

Thu Sep 11 05:55:42 CEST 2003
-----------------------------